--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="fejlec">
         <div class="menu">
           <ul>
-            <li><a href="#">Kinti cicák</a></li>
+            <li><a href="#">Kinti cicáka</a></li>
             <li><a href="#">Benti cicák</a></li>
             <li><a href="#">Macskajátékok</a></li>
             <li><a href="#">Események</a></li>
