--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="description" content="Free Web tutorials" >
-    <meta name="keywords" content="HTML, CSS, JavaScript" >
-    <meta name="author" content="John Doe" >
-    <link rel="stylesheet" href="stilus.css" >
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Free Web tutorials" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="John Doe" />
+    <link rel="stylesheet" href="stilus.css" />
+    <title>Macskaland</title>
   </head>
   <body>
     <div class="tarolo">
       <div class="fejlec">
         <div class="menu">
           <ul>
-            <li><a href="#">Kinti cicáka</a></li>
+            <li><a href="kinti_cicak.html">Kinti cicák</a></li>
             <li><a href="#">Benti cicák</a></li>
             <li><a href="#">Macskajátékok</a></li>
             <li><a href="#">Események</a></li>
