--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="menu">
           <ul>
             <li><a href="kinti_cicak.html">Kinti cicák</a></li>
-            <li><a href="#">Benti cicák</a></li>
+            <li><a href="benti_cicak.html">Benti cicák</a></li>
             <li><a href="#">Macskajátékok</a></li>
             <li><a href="#">Események</a></li>
           </ul>
