--- a/benti_cicak.html
+++ b/benti_cicak.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="John Doe" />
     <link rel="stylesheet" href="stilus.css" />
-    <title>Kinti cicák</title>
+    <title>Benti cicák</title>
 </head>
 
 <body>
