--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="kozepsolink">
           <ul>
-            <li><a href="#">Keresem a ciám</a></li>
+            <li><a href="keresem_a_cicam.html">Keresem a ciám</a></li>
           </ul>
         </div>
       </div>
