--- a/benti_cicak.html
+++ b/benti_cicak.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Free Web tutorials" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="John Doe" />
-    <link rel="stylesheet" href="stilus.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="Free Web tutorials" >
+    <meta name="keywords" content="HTML, CSS, JavaScript" >
+    <meta name="author" content="John Doe" >
+    <link rel="stylesheet" href="stilus.css" >
     <title>Benti cicák</title>
 </head>
 
@@ -24,8 +24,8 @@
             <li>Biztosítanod kell számára a napi aktivitást és sportot</li>
         </ul>
         <div class="kepek">
-            <img src="cicak_forras/images/bengali.jpg" alt="cica" />
-            <img src="cicak_forras/images/meg ez a cica.jpg" alt="cica" />
+            <img src="cicak_forras/images/bengali.jpg" alt="cica" >
+            <img src="cicak_forras/images/megezacica.jpg" alt="cica" >
             <div class="balalso">
                 <p>Bengáli macska</p>
             </div>
