--- a/keresem_a_cicam.html
+++ b/keresem_a_cicam.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Free Web tutorials" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="John Doe" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="Free Web tutorials" >
+    <meta name="keywords" content="HTML, CSS, JavaScript" >
+    <meta name="author" content="John Doe" >
     <script src="https://kit.fontawesome.com/a439df04b0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stilus.css" />
+    <link rel="stylesheet" href="stilus.css" >
     <title>Keresem a cicám</title>
 </head>
 
@@ -21,8 +21,10 @@
         </p>
         <div id="menu2">
             <ul>
-                <li><a href="kinti_cicak.html"><i class="fa-solid fa-tree" style="color: #ffffff;"></i> Kinti cica</a></li>
-                <li><a href="benti_cicak.html"><i class="fa-solid fa-house" style="color: #ffffff;"></i> Benti cica</a></li>
+                <li><a href="kinti_cicak.html"><i class="fa-solid fa-tree" style="color: #ffffff;"></i> Kinti cica</a>
+                </li>
+                <li><a href="benti_cicak.html"><i class="fa-solid fa-house" style="color: #ffffff;"></i> Benti cica</a>
+                </li>
             </ul>
         </div>
     </div>
