--- a/kinti_cicak.html
+++ b/kinti_cicak.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Free Web tutorials" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="John Doe" />
-    <link rel="stylesheet" href="stilus.css" />
-    <title>Kinti cicák</title>
-  </head>
 
-  <body>
-    <div class="tarolo">
-      <h1>Kinti cicák</h1>
-      <p>
-        Az időjárás és a hőmérséklet nagyban befolyásolja, hogy egy macska kint
-        tartható-e. Extrém hideg vagy meleg időjárás veszélyeztetheti a macska
-        egészségét.
-      </p>
-      <h2>Amire mindenképpen figyelj:</h2>
-      <ul class="bal">
-        <li>Ne tudjon kimenni az utcára</li>
-        <li>Legyen egy megfelelő menedéke</li>
-        <li>Mindig legyen élelme és vize</li>
-      </ul>
-      <div class="kepek">
-        <img src="cicak_forras/images/norveg macska.jpg" alt="cica" />
-        <img src="cicak_forras/images/main coon.jpg" alt="cica" />
-        <div class="balalso">
-            <p>Norvég Erdei Macska</p>
-        </div> 
-        <div class="jobbalso">
-            <p>Maine Coon</p>
-        </div>
+<head>
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta name="description" content="Free Web tutorials" >
+  <meta name="keywords" content="HTML, CSS, JavaScript" >
+  <meta name="author" content="John Doe" >
+  <link rel="stylesheet" href="stilus.css" >
+  <title>Kinti cicák</title>
+</head>
+
+<body>
+  <div class="tarolo">
+    <h1>Kinti cicák</h1>
+    <p>
+      Az időjárás és a hőmérséklet nagyban befolyásolja, hogy egy macska kint
+      tartható-e. Extrém hideg vagy meleg időjárás veszélyeztetheti a macska
+      egészségét.
+    </p>
+    <h2>Amire mindenképpen figyelj:</h2>
+    <ul class="bal">
+      <li>Ne tudjon kimenni az utcára</li>
+      <li>Legyen egy megfelelő menedéke</li>
+      <li>Mindig legyen élelme és vize</li>
+    </ul>
+    <div class="kepek">
+      <img src="cicak_forras/images/norvegmacska.jpg" alt="cica">
+      <img src="cicak_forras/images/maincoon.jpg" alt="cica">
+      <div class="balalso">
+        <p>Norvég Erdei Macska</p>
+      </div>
+      <div class="jobbalso">
+        <p>Maine Coon</p>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
