--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Free Web tutorials" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="John Doe" />
-    <link rel="stylesheet" href="stilus.css" />
-    <title>Macskaland</title>
-  </head>
-  <body>
-    <div class="tarolo">
-      <div class="fejlec">
-        <div class="menu">
-          <ul>
-            <li><a href="kinti_cicak.html">Kinti cicák</a></li>
-            <li><a href="benti_cicak.html">Benti cicák</a></li>
-            <li><a href="#">Macskajátékok</a></li>
-            <li><a href="#">Események</a></li>
-          </ul>
-        </div>
-        <div class="cim">
-          <h1>Macskaland</h1>
-        </div>
-        <div class="szoveg">
-          <p>
-            Keresd meg a hozzád legjobban illő négylábúdat és böngéssz az
-            eseményeink között!
-          </p>
-        </div>
-        <div class="kozepsolink">
-          <ul>
-            <li><a href="keresem_a_cicam.html">Keresem a ciám</a></li>
-          </ul>
-        </div>
+
+<head>
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta name="description" content="Free Web tutorials" >
+  <meta name="keywords" content="HTML, CSS, JavaScript" >
+  <meta name="author" content="John Doe" >
+  <link rel="stylesheet" href="stilus.css" >
+  <title>Macskaland</title>
+</head>
+
+<body>
+  <div class="tarolo">
+    <div class="fejlec">
+      <div class="menu">
+        <ul>
+          <li><a href="kinti_cicak.html">Kinti cicák</a></li>
+          <li><a href="benti_cicak.html">Benti cicák</a></li>
+          <li><a href="macskajatekok.html">Macskajátékok</a></li>
+          <li><a href="esemenyek.html">Események</a></li>
+        </ul>
+      </div>
+      <div class="cim">
+        <h1>Macskaland</h1>
+      </div>
+      <div class="szoveg">
+        <p>
+          Keresd meg a hozzád legjobban illő négylábúdat és böngéssz az
+          eseményeink között!
+        </p>
+      </div>
+      <div class="kozepsolink">
+        <ul>
+          <li><a href="keresem_a_cicam.html">Keresem a ciám</a></li>
+        </ul>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
