--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="kozepsolink">
         <ul>
-          <li><a href="keresem_a_cicam.html">Keresem a ciám</a></li>
+          <li><a href="keresem_a_cicam.html">Keresem a cicám</a></li>
         </ul>
       </div>
     </div>
